<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorQuizHelpActivity"
    android:background="@drawable/app_bg">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:icon="@drawable/ic_back"
            app:iconSize="24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/fig_700"
            android:text="Panduan Kuis Buta Warna"
            android:textColor="@color/md_theme_primary"
            android:textSize="@dimen/text_xlarge" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="15dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/md_theme_onBackground"
                    android:text="1.  " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/md_theme_onBackground"
                    android:text="@string/step1kuis"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/md_theme_onBackground"
                    android:textSize="@dimen/text_medium"
                    android:text="2. " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_theme_onBackground"
                    android:fontFamily="@font/fig_500"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/step2kuis"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/md_theme_onBackground"
                    android:textSize="@dimen/text_medium"
                    android:text="3. " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/md_theme_onBackground"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/step3kuis"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/md_theme_onBackground"
                    android:textSize="@dimen/text_medium"
                    android:text="4. " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/md_theme_onBackground"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/step4kuis"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/md_theme_onBackground"
                    android:textSize="@dimen/text_medium"
                    android:text="5. " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/md_theme_onBackground"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/step5kuis"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/md_theme_onBackground"
                    android:textSize="@dimen/text_medium"
                    android:text="6. " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/md_theme_onBackground"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/step6kuis"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>