<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:fitsSystemWindows="true"
    tools:context=".InfoPembuatActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:icon="@drawable/ic_back"
            app:iconSize="24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/fig_700"
            android:text="Tentang Pembuat"
            android:textColor="@color/md_theme_primary"
            android:textSize="@dimen/text_xlarge" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardProfil"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_background"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/fig_500"
                        android:text="@string/profil"
                        android:textColor="@color/md_theme_onBackground"
                        android:textSize="@dimen/text_small"
                        android:justificationMode="inter_word"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardApp"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_background"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/fig_500"
                        android:text="@string/descApp"
                        android:textColor="@color/md_theme_onBackground"
                        android:textSize="@dimen/text_small"
                        android:justificationMode="inter_word"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardFitur"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_background"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/fig_500"
                        android:text="@string/fitur"
                        android:textColor="@color/md_theme_onBackground"
                        android:textSize="@dimen/text_small"
                        android:justificationMode="inter_word"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardTerimakasih"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_background"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/fig_500"
                        android:text="@string/terimakasih"
                        android:textColor="@color/md_theme_onBackground"
                        android:textSize="@dimen/text_small"
                        android:justificationMode="inter_word"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>